# trip-planner

./: .gitignore  CHANGELOG.md  LICENSE  README.md
backend/: .env.example  README.md  pyproject.toml
backend/src/trip_planner/: config.py  main.py
backend/tests/: conftest.py  test_amadeus_search_service.py  test_flight_search_service.py  test_flights_api.py  test_health.py
backend/trip_planner/: __init__.py  main.py
backend/trip_planner/api/: flights.py  health.py
backend/trip_planner/models/: flights.py
backend/trip_planner/services/: amadeus_search.py  flight_search.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/: FlightResultsTable.tsx  FlightSearchForm.tsx  Sidebar.tsx
frontend/src/hooks/: useProfile.ts
frontend/src/lib/: api.ts  filterFlights.test.ts  filterFlights.ts
